--- a/templates/diagram.html
+++ b/templates/diagram.html
@@ -6,6 +6,10 @@
 
 </div>
 
+<div id="table" class="table">
+
+</div>
+
 <script type="text/javascript" src="{{url_for('static', filename='scripts/draw.js')}}"></script>
 <script type="text/javascript">
   var gene = '{{ gene|tojson }}'
