--- a/templates/diagram.html
+++ b/templates/diagram.html
@@ -2,13 +2,7 @@
 
 {% block content %}
 
-<div class="svg">
-
-</div>
-
-<div id="table" class="table">
-
-</div>
+<div class="svg"></div>
 
 <script type="text/javascript" src="{{url_for('static', filename='scripts/draw.js')}}"></script>
 <script type="text/javascript">
