started working on blast and finished file retreival via ncbi

--- a/templates/map.html
+++ b/templates/map.html
@@ -14,8 +14,13 @@
       <h4 class="ui divider header">{{ form.upload.label }}</h4>
       <br>
       <div class="container">
-        <div class="eight wide field">
-          <input type="file" name="upload">
+        <div class="two fields">
+          <div class="eight wide field">
+            <input type="file" name="upload">
+          </div>
+          <div class="eight wide field">
+            <input type="text" name="accession_number">
+          </div>
         </div>
       </div>
       <h4 class="ui divider header">{{ form.options.label }}</h4>
