--- a/static/css/plot.css
+++ b/static/css/plot.css
@@ -1,10 +1,22 @@
 .container{
-    position: relative;
-    top: 5em;
+    width: 70%;
+    display: inline-block;
+    margin: auto;
 }
 
 canvas{
     padding: 0;
     margin: auto;
     display: block;
+}
+
+.description{
+    float: right;
+    margin-top: -26.5em;
+    margin-right: 10% !important;
+}
+
+.center{
+    margin-left: 16% !important;
+    margin: 5em;
 }
