fixed interface & started to build newick files

--- a/templates/map.html
+++ b/templates/map.html
@@ -8,8 +8,8 @@
       <br>
       {{ form.hidden_tag() }}
       <div class="eight wide field">
-        <label>{{ form.organism_name.label }}</label>
-        <input type="text" name="organism_name" placeholder="Organism Name">
+        <label>{# form.organism_name.label #}</label>
+        <!-- <input type="text" name="organism_name" placeholder="Organism Name"> -->
       </div>
       <h4 class="ui divider header">{{ form.upload.label }}</h4>
       <br>
