--- a/static/css/plot.css
+++ b/static/css/plot.css
@@ -1,22 +1,75 @@
 .container{
-    width: 70%;
-    display: inline-block;
+    display: block;
     margin: auto;
+}
+
+.container.center{
+    width: 80%;
+    padding-top: 5em;
 }
 
 canvas{
     padding: 0;
     margin: auto;
     display: block;
+    margin-right: 28em;
 }
 
-.description{
+.hide{
+   display: none;
+}
+
+.ui.card{
     float: right;
-    margin-top: -26.5em;
-    margin-right: 10% !important;
+    top: -27em;
+    right: 16em !important;
 }
 
-.center{
-    margin-left: 16% !important;
-    margin: 5em;
+.owl-stage-outer{
+    width: 100%;
+    max-height: 20em;
+}
+
+
+.owl-carousel.owl-loaded{
+    top: -10em;
+}
+
+.owl-dots, .owl-nav{
+   margin-right: 40em;
+}
+
+p{
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+.outer{
+    width: 60%;
+    float: right;
+}
+
+.container.owl-carousel.owl-theme.owl-loaded.owl-drag{
+    right: 6.5em;
+}
+
+.myform{
+    width: 40%;
+    float: left;
+    margin-left: -12em;
+}
+
+.ui.form{
+    float: left;
+    top: 4em;
+}
+
+.ui.form .field{
+    margin-right: 5px;
+    left: 5px;
+}
+
+.ui.checkbox{
+    margin-right: 8px;
 }
