--- a/templates/diagram.html
+++ b/templates/diagram.html
@@ -4,17 +4,33 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/plot.css') }}">
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-<div class="container center">
-  <canvas id="canvas" width="650" height="430"></canvas>
-  <div class="description">
-    <h3>Organism Name: </h3>
-    <h3>Accession Number: </h3>
-  </div>
+<div class="container myform">
+  <form class="ui form" action="{{url_for('diagram')}}" method="post" target="_blank">
+      <div class="field">
+          <label>Build Phylogenetic Trees</label>
+            <div class="grouped field">
+            </div>
+        </div>
+        <button class="ui button" type="submit">submit</button>
+    </form>
 </div>
-<div class="container owl-carousel owl-theme" id="secondary"></div>
-<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.min.js')}}"></script>
+<div class="outer">
+    <div class="container center">
+        <canvas id="canvas" width="700" height="400"></canvas>
+        <div class="ui card">
+          <div class="content">
+            <div class="header">Organism Name: </div>
+            <div class="meta">Accession Number: </div>
+            <div class="description" id="main">
+              Click to see Gene info.
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="container owl-carousel owl-theme" id="secondary"></div>
+</div>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.1.1.5.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='scripts/PlotGenome.js')}}"></script>
 <script type="text/javascript">
   var gene = '{{ gene | tojson}}'
@@ -23,5 +39,6 @@
     plotGenome(parsed), false})
 </script>
 <script type="text/javascript" src="{{url_for('static', filename='scripts/carousel.js')}}" defer></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/form.js')}}"></script>
 {% endblock %}
 
