--- a/templates/map.html
+++ b/templates/map.html
@@ -39,15 +39,15 @@
         </div>
         <div class="container second">
           <div class="grouped fields">
-            <div class="five wide field">
+            <div class="eight wide field">
               <label>{{ form.gene.label }}</label>
               <input type="text" name="gene" placeholder="Gene of Interest">
             </div>
-            <div class="five wide field">
+            <div class="eight wide field">
               <label>{{ form.basepairs.label }}</label>
               <input type="text" name="basepairs" placeholder="1500">
             </div>
-            <div class="five wide field">
+            <div class="eight wide field">
               <label>{{form.similarity.label}}</label>
               <input type="text" name="ident" placeholder="1500">
             </div>
