--- a/templates/diagram.html
+++ b/templates/diagram.html
@@ -1,17 +1,16 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/plot.css') }}">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<link rel="stylesheet" href="{{url_for('static', filename='css/assets/owl.carousel.min.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/assets/owl.theme.default.min.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/plot.css')}}">
 <div class="ui grid first">
   <div class="fourteen wide column">
     <div class="ui huge positive message">
         <div class="header">
             Analysis was completed successfully
         </div>
-        <p>Job Number: <b>{{number}}</b> This can be used for future references</p>
+        <p>Job Number: <b> {{number}}. </b> This can be used for future references.</p>
         <a target="_blank" href="{{url_for('phyloTree', job_number = number)}}">Continue for Phylogenetic Analysis</a>
     </div>
   </div>
@@ -29,11 +28,12 @@
       </div>
     </div>
     <div class="container">
-      <div id="itemMap" class="owl-carousel"></div>
+      <div class="owl-carousel owl-theme" id="map"></div>
     </div>
   </div>
 </div>
-<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.1.1.5.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.min.js')}}"></script>
+<script src="{{url_for('static', filename='scripts/OwlCarousel/dist/owl.carousel.min.js')}}" type="text/javascript"></script>
 <script type="text/javascript" src="{{url_for('static', filename='scripts/PlotGenome.js')}}"></script>
 <script type="text/javascript">
   var gene = {{ gene | tojson}}
