--- a/templates/diagram.html
+++ b/templates/diagram.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/assets/owl.carousel.min.css')}}">
-<link rel="stylesheet" href="{{url_for('static', filename='css/assets/owl.theme.default.min.css')}}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
 <link rel="stylesheet" href="{{url_for('static', filename='css/plot.css')}}">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <div class="ui grid first">
   <div class="fourteen wide column">
     <div class="ui huge positive message">
@@ -27,26 +28,18 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="owl-carousel owl-theme" id="map"></div>
-    </div>
+    <div class="owl-carousel owl-theme" id="map"></div>
   </div>
 </div>
-<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.min.js')}}"></script>
-<script src="{{url_for('static', filename='scripts/OwlCarousel/dist/owl.carousel.min.js')}}" type="text/javascript"></script>
-<script type="text/javascript" src="{{url_for('static', filename='scripts/PlotGenome.js')}}"></script>
 <script type="text/javascript">
   var gene = {{ gene | tojson}}
   //var parsed = JSON.parse(gene);
   window.addEventListener('load', function(){
     plotGenome(gene), false})
 </script>
-<script type="text/javascript" src="{{url_for('static', filename='scripts/carousel.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/Scribl/Scribl.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static', filename='scripts/PlotGenome.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='scripts/form.js')}}"></script>
-<!-- <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      carousel();
-    }, false);
-</script> -->
+<script type="text/javascript" src="{{url_for('static', filename='scripts/carousel.js')}}" defer></script>
 {% endblock %}
 
