--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
         <a href="{{url_for('index')}}" class="item">Home</a>
         <div class="right menu">
           <a href="{{url_for('mapping')}}" class="item">GenomeMap</a>
-          <a href="{{url_for('phylo')}}" class="item">Phylogeny</a>
+          <a href="" class="item">Phylogeny</a>
           <a href="#" class="item">FAQ</a>
         </div>
       </div>
